[package]
name = "spacers"
version = "0.1.0"
description = "Spaceship simulator??"
authors = ["Jules G <gagnonjules@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
color-eyre = "0.6.3"
rstar = "0.12.2"
slotmap = "1.1.1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
